# ROBODOG-GAZEBO

./: README.md
carrot_stick/: package.xml  setup.cfg  setup.py
carrot_stick/carrot_stick/: initial_control.py
odomshi/: IK_code  package.xml  setup.cfg  setup.py
odomshi/config/: ekf_config.yaml  ukf_config.yaml
odomshi/odomshi/: imu.py  odom.py  relay.py
poc_pipeline/launch/: poc_pipeline.launch.py
poc_pipeline/poc_pipeline/: dog_command_node.py  serial_bridge_node.py
rover_gazebosim/: package.xml  setup.py
rover_gazebosim/config/: parameter_bridge.yaml
rover_gazebosim/launch/: launch.py
rover_gazebosim/meshes/: Body.STL  LFcalf.STL  LFshoulder.STL  LFthigh.STL  LRcalf.STL  LRshoulder.STL  LRthigh.STL  RFcalf.STL  RFshoulder.STL  RFthigh.STL  RRcalf.STL  RRshoulder.STL  RRthigh.STL
rover_gazebosim/urdf/: placosucks.urdf  robodog_urdf_visual.csv  robodog_urdf_visual.urdf
rover_gazebosim/worlds/: world.sdf
